tests/snapshots/instas__jsx_expression_comment_run_is_rejected.snap
---
source: tests/instas.rs
expression: "format! (\"{e:?}\")"
---
  x in comment on line 5
  |-> in Y-Statement starting on line 5
  |-> in paragraph 1 of that statement
  `-> Y-Statement did not match expected format
   ,----
   `----
  help: Note the lack of a trailing `.`
