tests/snapshots/instas__malformed_para.snap
---
source: tests/instas.rs
expression: "format! (\"{e:?}\")"
---
  x in comment on line 2
  |-> in Y-Statement starting on line 3
  |-> in paragraph 2 of that statement
  `-> Y-Statement did not match expected format
   ,-[3:1]
 1 | In the context of <ctx>, we faced <con>.
 2 | 
 3 | We failed to follow the format for <opt>, and neglected <alt>.
   : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   :                                `-- expected "We decided for <..>, and neglected <..>."
 4 | 
 5 | We did this to achieve <qua>, accepting
 6 | <dwn>.
   `----
  help: Note that punctuation is significant; you have to match every , and .
