tests/snapshots/instas__missing_paragraph.snap
---
source: tests/instas.rs
expression: "format! (\"{e:?}\")"
---
  x in comment on line 2
  |-> in Y-Statement starting on line 3
  `-> Y-Statement is missing a paragraph.
   ,-[7:1]
 4 | 
 5 | We did this to achieve <qua>, accepting
 6 | <dwn>.
 7 |    
   : ^|^
   :  `-- expected "We think this is the right trade-off because <..>."
   `----
