tests/snapshots/instas__no_title.snap
---
source: tests/instas.rs
expression: "format!(\"{e:?}\")"
---
  x in comment on line 2
  `-> YADR statement on line 3 not followed by :
   ,----
 1 | YADR
   : ^^|^
   :   `-- expected YADR:
   `----
  help: try `YADR: 2023-11-28 some-concise-title`

